--- a/firstProject/more-styles.css
+++ b/firstProject/more-styles.css
@@ -1,7 +1,8 @@
 button {
-    width: 200px;
+    width: 50px;
     height 200px;
     background-color: maroon;
+    min-width: initial !important;
 }
 
 p {
@@ -43,4 +44,6 @@ h2:nth-of-type(1) {
     transform: rotate(180deg);
     transform: scale(0.5)
 }
+
+
 
